# BattleBay_tool_v1.0

./: .gitignore  CMakeLists.txt  Cahier des charges.docx  README.md  apply_training_and_perks.c  apply_training_and_perks.h  boats.c  boats.h  clear_input.c  clear_input.h  data.7z  main.c  menu.c  menu.h  objects.c  objects.h  perks.c  perks.h  readobjects.c  readobjects.h  readtraining.c  readtraining.h  ships.c  ships.h  training.h  weapons.c  weapons.h  ~$hier des charges.docx
Perk_data/: event_Rarity_Item.csv  event_epic_all_cannons.csv  event_epic_all_fire.csv  event_epic_all_incendiary_items.csv  event_epic_all_missiles.csv  event_epic_all_mortars.csv  event_epic_all_repair_items.csv  event_epic_all_shields.csv  event_epic_all_torpedoes.csv  event_epic_big_bandage.csv  event_epic_big_berta.csv  event_epic_big_torpedo.csv  event_epic_blast_cannon.csv  event_epic_cannon.csv  event_epic_carronade.csv  event_epic_duct_tape.csv  event_epic_explosive_cannon.csv  event_epic_fire_bomb.csv  event_epic_flare_gun.csv  event_epic_freeze_items.csv  event_epic_frost_blaster.csv  event_epic_gatling_gun.csv  event_epic_grenades.csv  event_epic_long_range_mortar.csv  event_epic_mines.csv  event_epic_missiles.csv  event_epic_napalm.csv  event_epic_railgun.csv  event_epic_railguns.csv  event_epic_repair_bolt.csv  event_epic_repair_box.csv  event_epic_repair_plasma.csv  event_epic_repair_pulse.csv  event_epic_sniper_cannon.csv  event_epic_standard_mortar.csv  event_epic_standard_torpedo.csv  event_epic_swift_torpedo.csv  event_epic_tesla_bolt.csv  event_epic_tesla_shield.csv  (+119 more)
(+467 files in other folders)
